# Software_Engineering

00-linux/04-session/Tasks/: Task_1.sh  Task_2.sh  Task_3.sh
00-linux/04-session/bash_scripting/: Task_1.sh  Task_2.sh  Task_3.sh  Task_4.sh  (+6 more)
02-oop/02-polymorphism/tasks/Task_11_2/: CMakeLists.txt  main.cpp
03-templets/session_code/: App.cpp  Computer.cpp  Max_function.cpp  Stack.h  Stack.tpp  conversions.cpp  motion.cpp
04-design pattern/session_code/: singleleTone
05-stl/session_code/: stl
06-smart_pointer/TASKS/: task_17_3.cpp
06-smart_pointer/session_code/: proxy_code  unique_pointer
06-stl/session_code/: stl.cpp
07-smart_pointer/TASKS/: session  session.cpp
07-smart_pointer/session_code/: observer_code.cpp  proxy_code.cpp  shared_pointer  shared_pointer.cpp  unique_pointer.cpp
08-solid principles & design pattern/session_code/: singleleTone.cpp
10-build_tools/session_code/: Makefile  doc.cpp  doc.h  main.cpp  stud.cpp  stud.h  test
11-Qt/build-Qt_first-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  Qt_first  build.ninja  cmake_install.cmake
11-Qt/build-Weather_Project-Desktop-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
11-Qt/build-Weathr-Desktop-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
11-Qt/build-charts-Desktop-Debug/: Makefile  charts  moc_mainwindow.cpp
11-Qt/build-test-Desktop-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
11-Qt/build-tolip-Desktop-Debug/: Makefile  moc_mainwindow.cpp  tolip  ui_mainwindow.h
11-Qt/charts/: mainwindow.cpp  mainwindow.h
(+186 files in other folders)
